--- a/src/app/view/index.html
+++ b/src/app/view/index.html
@@ -1,11 +1,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <ul>
-  {% for file in files %}
-    <li>
-      <a href="/edit/{{ file }}">{{ file }}</a>
-    </li>
-  {% endfor %}
-  </ul>
+  <h1>Hello world</h1>
 {% endblock %}
