--- a/src/app/view/layout.html
+++ b/src/app/view/layout.html
@@ -7,7 +7,7 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="format-detection" content="email=no"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-  <title>NodeJs FaaS</title>
+  <title>Mirco Serverless</title>
   <script src="https://cdn.bootcss.com/codemirror/5.48.4/codemirror.min.js"></script>
   <script src="https://cdn.bootcss.com/codemirror/5.48.4/mode/javascript/javascript.min.js"></script>
   <link href="https://cdn.bootcss.com/codemirror/5.48.4/codemirror.css" rel="stylesheet">
